# IQ-EQ

./: .gitignore  README.md  pyproject.toml
myapp/: models.py  serializers.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_auto_20230607_1425.py
tests/: settings.py  urls.py
